--- a/subprojects/docs/src/docs/userguide/migration/upgrading_version_7.adoc
+++ b/subprojects/docs/src/docs/userguide/migration/upgrading_version_7.adoc
@@ -80,6 +80,7 @@ See more details about toolchain configuration in the <<toolchains#sec:configuri
 
 These members will be removed in Gradle 9.0.
 
+* `CollectionUtils`
 * `GradleVersion.getBuildTime()`
 * `GradleVersion.getNextMajor()`
 * `GradleVersion.getRevision()`
