Nag deprecation of org.gradle.util.GFileUtils type
Signed-off-by: Paul Merlin <paul@gradle.com>
Signed-off-by: Adam <897017+aSemy@users.noreply.github.com>

--- a/subprojects/docs/src/docs/userguide/migration/upgrading_version_7.adoc
+++ b/subprojects/docs/src/docs/userguide/migration/upgrading_version_7.adoc
@@ -81,6 +81,7 @@ See more details about toolchain configuration in the <<toolchains#sec:configuri
 These members will be removed in Gradle 9.0.
 
 * `CollectionUtils`
+* `GFileUtils`
 * `GradleVersion.getBuildTime()`
 * `GradleVersion.getNextMajor()`
 * `GradleVersion.getRevision()`
