Nag deprecation of org.gradle.util.GUtil type
Signed-off-by: Paul Merlin <paul@gradle.com>

--- a/subprojects/docs/src/docs/userguide/migration/upgrading_version_7.adoc
+++ b/subprojects/docs/src/docs/userguide/migration/upgrading_version_7.adoc
@@ -86,6 +86,7 @@ These members will be removed in Gradle 9.0.
 * `GradleVersion.getNextMajor()`
 * `GradleVersion.getRevision()`
 * `GradleVersion.isValid()`
+* `GUtil`
 
 === Potential breaking changes
 
