Nag deprecation of org.gradle.util.SingleMessageLogger type
Signed-off-by: Paul Merlin <paul@gradle.com>

--- a/subprojects/docs/src/docs/userguide/migration/upgrading_version_7.adoc
+++ b/subprojects/docs/src/docs/userguide/migration/upgrading_version_7.adoc
@@ -87,6 +87,7 @@ These members will be removed in Gradle 9.0.
 * `GradleVersion.getRevision()`
 * `GradleVersion.isValid()`
 * `GUtil`
+* `SingleMessageLogger`
 
 === Potential breaking changes
 
