Nag deprecation of org.gradle.util.ConfigureUtil type
Signed-off-by: Paul Merlin <paul@gradle.com>

--- a/subprojects/docs/src/docs/userguide/migration/upgrading_version_7.adoc
+++ b/subprojects/docs/src/docs/userguide/migration/upgrading_version_7.adoc
@@ -82,6 +82,7 @@ These members will be removed in Gradle 9.0.
 
 * `ClosureBackedAction`
 * `CollectionUtils`
+* `ConfigureUtil`
 * `GFileUtils`
 * `GradleVersion.getBuildTime()`
 * `GradleVersion.getNextMajor()`
