Nag deprecation of org.gradle.util.DistributionLocator type
Signed-off-by: Paul Merlin <paul@gradle.com>

--- a/subprojects/docs/src/docs/userguide/migration/upgrading_version_7.adoc
+++ b/subprojects/docs/src/docs/userguide/migration/upgrading_version_7.adoc
@@ -83,6 +83,7 @@ These members will be removed in Gradle 9.0.
 * `ClosureBackedAction`
 * `CollectionUtils`
 * `ConfigureUtil`
+* `DistributionLocator`
 * `GFileUtils`
 * `GradleVersion.getBuildTime()`
 * `GradleVersion.getNextMajor()`
