Nag deprecation of org.gradle.util.NameValidator type
Signed-off-by: Paul Merlin <paul@gradle.com>
Signed-off-by: Adam <897017+aSemy@users.noreply.github.com>

--- a/subprojects/docs/src/docs/userguide/migration/upgrading_version_7.adoc
+++ b/subprojects/docs/src/docs/userguide/migration/upgrading_version_7.adoc
@@ -91,6 +91,7 @@ These members will be removed in Gradle 9.0.
 * `GradleVersion.isValid()`
 * `GUtil`
 * `NameMatcher`
+* `NameValidator`
 * `SingleMessageLogger`
 
 === Potential breaking changes
