Nag deprecation of org.gradle.util.RelativePathUtil type
Signed-off-by: Paul Merlin <paul@gradle.com>

--- a/subprojects/docs/src/docs/userguide/migration/upgrading_version_7.adoc
+++ b/subprojects/docs/src/docs/userguide/migration/upgrading_version_7.adoc
@@ -92,6 +92,7 @@ These members will be removed in Gradle 9.0.
 * `GUtil`
 * `NameMatcher`
 * `NameValidator`
+* `RelativePathUtil`
 * `SingleMessageLogger`
 
 === Potential breaking changes
