Nag deprecation of org.gradle.util.VersionNumber type
Signed-off-by: Paul Merlin <paul@gradle.com>
Signed-off-by: Adam <897017+aSemy@users.noreply.github.com>

--- a/subprojects/docs/src/docs/userguide/migration/upgrading_version_7.adoc
+++ b/subprojects/docs/src/docs/userguide/migration/upgrading_version_7.adoc
@@ -94,6 +94,7 @@ These members will be removed in Gradle 9.0.
 * `NameValidator`
 * `RelativePathUtil`
 * `SingleMessageLogger`
+* `VersionNumber`
 
 === Potential breaking changes
 
