Nag deprecation of org.gradle.util.WrapUtil type
Signed-off-by: Paul Merlin <paul@gradle.com>

--- a/subprojects/docs/src/docs/userguide/migration/upgrading_version_7.adoc
+++ b/subprojects/docs/src/docs/userguide/migration/upgrading_version_7.adoc
@@ -95,6 +95,7 @@ These members will be removed in Gradle 9.0.
 * `RelativePathUtil`
 * `SingleMessageLogger`
 * `VersionNumber`
+* `WrapUtil`
 
 === Potential breaking changes
 
