Update docs about invalid toolchain spec errors

--- a/subprojects/docs/src/docs/userguide/jvm/toolchains.adoc
+++ b/subprojects/docs/src/docs/userguide/jvm/toolchains.adoc
@@ -107,9 +107,8 @@ A `JavaToolchainSpec` is considered _valid_ in two cases:
 In other words, if a vendor or an implementation are specified, they must be accompanied by the language version.
 Gradle distinguishes between toolchain specifications that configure the language version and the ones that do not.
 A specification without a language version, in most cases, would be treated as a one that selects the toolchain of the current build.
-If the language version is not set then Gradle will ignore values provided for other properties of the specification.
 
-Usage of _invalid_ instances of `JavaToolchainSpec` is deprecated and will be removed in the future versions of Gradle.
+Usage of _invalid_ instances of `JavaToolchainSpec` results in a build error since Gradle 8.0.
 
 
 == Specify custom toolchains for individual tasks
