Nag deprecation of org.gradle.util.TextUtil
Signed-off-by: Paul Merlin <paul@gradle.com>

--- a/subprojects/docs/src/docs/userguide/migration/upgrading_version_7.adoc
+++ b/subprojects/docs/src/docs/userguide/migration/upgrading_version_7.adoc
@@ -93,6 +93,7 @@ These members will be removed in Gradle 9.0.
 * `NameMatcher`
 * `NameValidator`
 * `RelativePathUtil`
+* `TextUtil`
 * `SingleMessageLogger`
 * `VersionNumber`
 * `WrapUtil`
