--- a/subprojects/docs/src/docs/userguide/jvm/jvm_test_suite_plugin.adoc
+++ b/subprojects/docs/src/docs/userguide/jvm/jvm_test_suite_plugin.adoc
@@ -232,12 +232,14 @@ Dependencies can be created lazily using these factory methods, as shown below.
 
 This API differs from the top-level `dependencies` block in the following ways:
 
-* You must explicitly call a getter and `add` outside Gradle build scripts.
+* Dependencies must be declared using a `String`, an instance of `Dependency`, a `FileCollection`, a `Provider` of `Dependency`, or a `ProviderConvertible` of `MinimalExternalModuleDependency`.
+* Outside of Gradle build scripts, you must explicitly call a getter for the `DependencyAdder` and `add`.
     ** `dependencies.add("implementation", x)` becomes `getImplementation().add(x)`
 * You cannot declare dependencies with the `Map` notation from Kotlin and Java.
   Use multi-argument methods instead in Kotlin and Java.
-    ** Kotlin: `compileOnly(mapOf("group" to "foo", "name" to "bar"))` becomes `compileOnly(group = "foo", name = "bar")`
-    ** Java: `compileOnly(Map.of("group", "foo", "name", "bar"))` becomes `getCompileOnly().add("foo", "bar", null)`
+    ** Kotlin: `compileOnly(mapOf("group" to "foo", "name" to "bar"))` becomes `compileOnly(module(group = "foo", name = "bar"))`
+    ** Java: `compileOnly(Map.of("group", "foo", "name", "bar"))` becomes `getCompileOnly().add(module("foo", "bar", null))`
+* You cannot add a dependency with an instance of `Project`. You must turn it into a `ProjectDependency` first.
 * You cannot add version catalog bundles directly.
   Instead, use the `bundle` method on each configuration.
     ** Kotlin and Groovy: `implementation(libs.bundles.testing)` becomes `implementation.bundle(libs.bundles.testing)`
@@ -246,7 +248,7 @@ This API differs from the top-level `dependencies` block in the following ways:
     ** Kotlin and Groovy: `implementation(myStringProvider)` becomes `implementation(myStringProvider.map { dependencyFactory.create(it) })`
     ** Java: `implementation(myStringProvider)` becomes `getImplementation().add(myStringProvider.map(getDependencyFactory()::create)`
 
-The `dependencies` block within a test suite does not provide access to the same methods as the link:{groovyDslPath}/org.gradle.api.artifacts.dsl.DependencyHandler.html[top-level `dependencies` block].
+The `dependencies` block within a test suite may not provide access to the same methods as the link:{groovyDslPath}/org.gradle.api.artifacts.dsl.DependencyHandler.html[top-level `dependencies` block].
 To access these methods, you need to use the top-level `dependencies` block.
 
 [NOTE]
