--- a/subprojects/docs/src/docs/userguide/jvm/toolchains.adoc
+++ b/subprojects/docs/src/docs/userguide/jvm/toolchains.adoc
@@ -201,12 +201,13 @@ In order to disable auto-detection, you can use the `org.gradle.java.installatio
 * Either start gradle using `-Porg.gradle.java.installations.auto-detect=false`
 * Or put `org.gradle.java.installations.auto-detect=false` into your `gradle.properties` file.
 
+//TODO (#21082): write the documentation for toolchain repository plugin authors
+
 [[sec:provisioning]]
 == Auto-Provisioning
 
 If Gradle can't find a locally available toolchain, which matches the requirements of the build, it can automatically download one.
-By default, downloading happens from Adoptium or AdoptOpenJDK, but this behaviour
-will be removed in future versions and a generic mechanism for using arbitrary toolchain repositories will take over.
+By default, downloading happens from Adoptium or AdoptOpenJDK, but this behaviour will be removed in future versions and a generic mechanism for using plugin-provided toolchain repositories will take over.
 For further details see the <<#sub:download_repositories,Toolchain Download Repositories>> section below.
 
 By default, downloading will request a HotSpot JDK matching the current operating system and architecture.
