--- a/subprojects/docs/src/docs/userguide/authoring-builds/software-product/composite_builds.adoc
+++ b/subprojects/docs/src/docs/userguide/authoring-builds/software-product/composite_builds.adoc
@@ -121,7 +121,7 @@ Tasks can be executed, tests can be run, and builds can be imported into the IDE
 Tasks from an included build can be executed from the command-line or from your IDE in the same way as tasks from a regular multi-project build.
 Executing a task will result in task dependencies being executed, as well as those tasks required to build dependency artifacts from other included builds.
 
-You call a task in an included build using a fully qualified path, for example `:included-build-name:project-name:taskName`.
+You can call a task in an included build using a fully qualified path, for example `:included-build-name:project-name:taskName`.
 Project and task names can be <<command_line_interface.adoc#sec:name_abbreviation,abbreviated>>.
 
 ----
