--- a/subprojects/docs/src/docs/userguide/jvm/groovy_plugin.adoc
+++ b/subprojects/docs/src/docs/userguide/jvm/groovy_plugin.adoc
@@ -281,7 +281,7 @@ include::sample[dir="snippets/groovy/compilationAvoidance/kotlin/ast-transformat
 Since 5.6, Gradle introduces an experimental incremental Groovy compiler. To enable incremental compilation for Groovy, you need:
 
 * Enable <<groovy_plugin.adoc#sec:groovy_compilation_avoidance,Groovy compilation avoidance>>.
-* Explicitly enable incremental Groovy compilation and incremental compilation after a failure in the build script:
+* Explicitly enable incremental Groovy compilation in the build script:
 
 .Enable incremental Groovy compilation
 ====
