--- a/subprojects/docs/src/docs/userguide/dep-man/01-core-dependency-management/dependency_verification.adoc
+++ b/subprojects/docs/src/docs/userguide/dep-man/01-core-dependency-management/dependency_verification.adoc
@@ -573,15 +573,17 @@ If you use git and use the binary version, make sure to make it treat this file 
 *.gpg           binary
 ----
 
-You can also ask Gradle to export all keys without updating the verification metadata file:
+====
+
+You can also ask Gradle to export all trusted keys without updating the verification metadata file:
 
 ----
 ./gradlew --export-keys
 ----
 
 [NOTE]
+====
 This command disables signature verification, similar to `--write-verification-metadata`.
-
 ====
 
 [[sec:bootstrapping-signature-verification]]
